base/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ims-backend-service
  namespace: inventory-system
  labels:
    app: ims-backend

spec:
  type: ClusterIP

  selector:
    app: ims-backend

  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
