base/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ims-frontend-service
  namespace: inventory-system
  labels:
    app: ims-frontend

spec:
  type: ClusterIP

  selector:
    app: ims-frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
